Fix scroll bar appearing for non-overflow code blocks

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -167,7 +167,7 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  overflow-x: scroll;
+  overflow-x: auto;
   /*white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;*/
